fix: Text size on mobile

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -52,7 +52,7 @@
 
 @media screen and (max-width: 767px) {
   .header a{
-    font-size: 14px;
+    font-size: 16px;
     padding-right: 0.5rem;
   }
 }
